# zodiac-rs

./: Cargo.toml  ONBOARDING.md  README.md  规则.md
frontend/: index.html
src/: main.rs  protocol.rs
src/ai/: action_codec.rs  heuristic.rs  mod.rs  model.rs  neural.rs  state_encoder.rs
src/game/: board.rs  mod.rs  piece.rs
src/server/: mod.rs
tools/: export_zooformer_onnx.py
